=========== 4.3.4
 * PBSQuery bugfix. getjob() can now handle short jobname, eg: 
    * p.getjob('6073545') 

   Author: Willem Vermin (SARA) & Bas van der Vlies 

 * added an example: pbs_jobmonitor shows the output of top 
   -u user on the node
    - one cycle of top
    - user: the user the job belongs to

   renamed as pbs_joblogin logs in to the node as the user 
   who invokes this script (os.getenv('USER'))

   Author: Willem Vermin (SARA)
  
=========== 4.3.3
 * New generated files for pbs_wrap.c and pbs.py to support python 3.X versions
   Reported by: Steve Traylen <steve dot traylen add cern dot ch>
   Author: Bas van der Vlies 

 * Fixed AdvancedParser when using 01-12 range the zero was not appended.
   Reported by: Ramon Bastiaans
   Author: Dennis Stam

 * examples/sara_nodes.py: Catch the PBSQuery error if we can not make a 
   connection with the batch server and exit the program.
   Author: Bas van der Vlies 

 * Remove the debian dependency on AdvancedParser. We now have
   our own PBSAdvanceParser so it does not conflict with other SARA
   packages.
   Reported by: Ramon Bastiaans (SARA)
   Fixed by: Bas van der Vlies

 * Make pbs_torque only dependend on libtorque instead of torque and adjusted 
   the maintainer of the package, closes #30
   Reported by: Guillermo Marcus  <guillermo dot marcus add@gmail dot com>
   Fixed by: Bas van der Vlies
   
=========== 4.3.0
 * new_rack_pbsmon.py: For backward compatibility added -a/--all option. 
   Has the same functionality as -s/--summary
   Author: Bas van der Vlies

 * Added some license info to debian package and include GPL and LGPL 3.0
   files.
   Suggested by: W. Trevor King <wking at drexel dot edu>

 * PBSQuery.py: Added support for new feature in node status field:
    * message=EVENT:<key=value:>+
    * message=ERROR <text>

  Added the following syntax for node:
  	* node['error']
    * node['event']

  eg: node: n1
    state = free
    np = 8
    properties = ib,switch1,highmem